fix: 🐛 adjust spacing on info-box

--- a/src/components/bnb-bullet-item/styles.scss
+++ b/src/components/bnb-bullet-item/styles.scss
@@ -21,7 +21,7 @@
 		flex-direction: column;
 		@include fontCopyInfo();
 		color: $purple;
-		margin-top: 70px;
+		margin-top: 7px;
 	}
 
 	bnb-icon {
